--- a/final.css
+++ b/final.css
@@ -1,24 +1,18 @@
 body {
   width:80%;
   height: 70%;
-  background color: #EF8A25;
+  background color: blue;
   text-decoration-color: #F9F2EB;
   text-align: center;
   margin: 0 auto;
 }
-aside {
-  display: block;
-  width: auto;
-  text-align: right;
-  background color: #EC8014;
-}
+
 .container {
-margin-top:400px;
 text-align: center;
 }
 .wordpress {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-width: 50%;
+  width:50%
+}
+head {
+
 }
