--- a/final.css
+++ b/final.css
@@ -1,11 +1,16 @@
-body {
-  width:80%;
-  height: 70%;
+*
+background-color: pink;
+  
+ {
   text-align: center;
   margin: 0 auto;
-  text-color: blue;
 }
-
+.list-unstyled {
+  text-align: center;
+}
+.nav-scroller {
+  color:#f16822;
+}
 .container img {
 border-radius: 8px;
 border: 10px solid white;
